--- a/mytravel.css
+++ b/mytravel.css
@@ -22,6 +22,9 @@ padding: 14px 16px;
 text-decoration: none;
 font-size:17px;
 }
+.nav-right a{
+    float:right;
+}
 .main {
 padding: 16px;
 margin-top: 30px;
