--- a/mytravel.css
+++ b/mytravel.css
@@ -101,3 +101,8 @@ display:flex;
 justify-content:center;
 align-items:center;
 }
+.gal-left {
+display:flex;
+justify-content:center;
+align-items:center;
+}
