--- a/mytravel.css
+++ b/mytravel.css
@@ -1,108 +1,143 @@
 body {
-margin: 0;
-background-image: url("travel.jpg");
-background-size: 100%;
-background-repeat: no-repeat;
-background-attachment: fixed;
-font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin: 0;
+    background-image: url("travel.jpg");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+
 .navbar {
-overflow: hidden;
-background-color: rgba(13, 110, 253, 0.5);
-position: fixed;
-top: 0;
-width: 100%;
+    overflow: hidden;
+    background-color: rgba(13, 110, 253, 0.5);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    
 }
-.navbar a{
-float: left;
-display:block;
-color: #f2f2f2;
-text-align: center;
-padding: 14px 16px;
-text-decoration: none;
-font-size:17px;
+
+.navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    border: 1px dotted lightblue;
 }
+
 .main {
-padding: 16px;
-margin-top: 30px;
-height: 1500px;
+    padding: 16px;
+    margin-top: 30px;
+    height: 1500px;
 }
-.flex{
-display:flex;
-justify-content: space-around;
+
+.flex {
+    display: flex;
+    justify-content: space-around;
 }
+
 div.gallery {
-margin: 5px;
-border: 2px solid lightskyblue;
-border-radius: 5%;
-text-align: center;
+    margin: 5px;
+    border: 2px solid lightskyblue;
+    border-radius: 5%;
+    text-align: center;
 }
+
 div.gallery:hover {
-border: 20px solid rgba(13, 110, 253, 0.8);
-background-color: rgba(13, 110, 253, 0.5);
+    border: 20px solid rgba(13, 110, 253, 0.8);
+    background-color: rgba(13, 110, 253, 0.5);
 }
+
 div.gallery img {
-max-width: 500px;
-max-height: 300px;
-width: 100%;
-height: auto;
+    max-width: 500px;
+    max-height: 300px;
+    width: 100%;
+    height: auto;
 }
-div.desc {
-text-decoration: none;
-text-align: center;
-font-size: 60px;
-color: 	#cff4fc;
-text-shadow: 3px 3px 3px darkblue;
+
+h1,div.desc {
+    text-decoration: none;
+    text-align: center;
+    font-size: 60px;
+    color: #cff4fc;
+    text-shadow: 3px 3px 3px darkblue;
+    -webkit-text-stroke:2px rgba(10, 10, 194, 0.5);
 }
-h1 {
-text-decoration: none;
-text-align: center;
-font-size: 60px;
-color: 	#cff4fc;
-text-shadow: 3px 3px 3px darkblue;
-}
+
 div h1 {
-margin-top: 5%;
+    margin-top: 5%;
 }
-.desc h1{
-margin: 0;
+
+.desc h1 {
+    margin: 0;
 }
+
 img {
-border-radius: 10%;
+    border-radius: 10%;
 }
-a { 
-text-decoration: none; 
+
+a {
+    text-decoration: none;
 }
+
 .back>a {
-text-align: center;
-font-size: 30px;
-/* color: rgba(13, 110, 253, 0.5); */
-color: 	#cff4fc;
-text-shadow: 3px 3px 3px darkblue;
-border: 2px solid lightskyblue;
-display:flex;
-justify-content:center;
-align-items:center;
+    text-align: center;
+    font-size: 30px;
+    /* color: rgba(13, 110, 253, 0.5); */
+    color: #cff4fc;
+    text-shadow: 3px 3px 3px darkblue;
+    border: 2px solid lightskyblue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 .back:hover {
-background-color: lightskyblue;
+    background-color: lightskyblue;
 }
+
 .gallery2 {
-border: 20px solid rgba(13, 110, 253, 0.8);
-background-color: rgba(13, 109, 253, 0.2);
-border-radius:5%;
-margin-top: 5%;
+    border: 20px solid rgba(13, 110, 253, 0.8);
+    background-color: rgba(13, 109, 253, 0.2);
+    border-radius: 5%;
+    margin-top: 5%;
 }
-.navbar a:hover{
-background-color: rgba(13, 109, 253, 0.7);
+
+.navbar a:hover {
+    background-color: rgba(13, 109, 253, 0.7);
 }
+
 .yt {
-display:flex;
-justify-content:center;
-align-items:center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 575px;
 }
+
 .gal-left {
-display:flex;
-justify-content:center;
-align-items:center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#borderimg2 {
+    border: 10px solid transparent;
+    padding: 15px;
+    /*-webkit-border-image: url(border.png) repeat;
+    -o-border-image: url(border.png) repeat;*/
+    border-image: url("border.png") repeat;
+    border-image-slice: 10%;
+}
+
+#flagimg {
+    width: 200px;
+    height: auto;
+    float: left;
+}
+
+.text3 {
+    color: #fff;
+    text-shadow: 1px -3px 8px darkblue;
 }
